updated links and python framework added

--- a/index.html
+++ b/index.html
@@ -166,15 +166,21 @@
                     pipelines, and advancing AI model evaluation. Specialized in strategic functional and non-functional
                     testing throughout the SDLC.</span>
                 <p style="font-size:1.08em;line-height:1.7em;">
-                    <span style="font-weight:bold;">🚀 Key Skills :</span><br>
-                    <span style="display:inline-block;margin:2px 0;">💻 <b>Java</b> &nbsp;|&nbsp; 🐍 <b>Python</b>
-                        &nbsp;|&nbsp; 📜 <b>JavaScript</b></span><br>
-                    <span style="display:inline-block;margin:2px 0;">🧪 <b>Selenium WebDriver</b> &nbsp;|&nbsp; 🎭
-                        <b>Playwright</b> &nbsp;|&nbsp; 🔗 <b>RestAssured API Testing</b></span><br>
-                    <span style="display:inline-block;margin:2px 0;">⚡ <b>Gatling Performance Testing</b> &nbsp;|&nbsp;
-                        🐳 <b>Docker & Kubernetes</b></span><br>
-                    <span style="display:inline-block;margin:2px 0;">🔧 <b>Jenkins CI/CD</b> &nbsp;|&nbsp; 📱 <b>Appium
-                            Mobile Testing</b> &nbsp;|&nbsp; 🤖 <b>AI/ML Model Validation</b></span>
+                    <span style="font-weight:bold; color:#fff; background:linear-gradient(90deg,#28a745 60%,#4d94d9 100%); padding:4px 18px; border-radius:8px; box-shadow:0 2px 8px rgba(40,167,69,0.10); letter-spacing:1px; font-size:1.13em; display:inline-block;">🚀 Key Skills :</span><br>
+                    <span style="display:inline-block;margin:2px 0;">💻 <b style="color:#28a745;">Java</b> &nbsp;|&nbsp;
+                        🐍 <b style="color:#28a745;">Python</b>
+                        &nbsp;|&nbsp; 📜 <b style="color:#28a745;">JavaScript</b></span><br>
+                    <span style="display:inline-block;margin:2px 0;">🧪 <b style="color:#28a745;">Selenium WebDriver</b>
+                        &nbsp;|&nbsp; 🎭
+                        <b style="color:#28a745;">Playwright</b> &nbsp;|&nbsp; 🔗 <b style="color:#28a745;">RestAssured
+                            API Testing</b></span><br>
+                    <span style="display:inline-block;margin:2px 0;">⚡ <b style="color:#28a745;">Gatling Performance
+                            Testing</b> &nbsp;|&nbsp;
+                        🐳 <b style="color:#28a745;">Docker & Kubernetes</b></span><br>
+                    <span style="display:inline-block;margin:2px 0;">🔧 <b style="color:#28a745;">Jenkins CI/CD</b>
+                        &nbsp;|&nbsp; 📱 <b style="color:#28a745;">Appium
+                            Mobile Testing</b> &nbsp;|&nbsp; 🤖 <b style="color:#28a745;">AI/ML Model
+                            Validation</b></span>
                 </p>
                 <p><a href="about.html#about" class="more-link"
                         aria-label="Read full professional summary on About Me page" target="_self">Discover My Journey
@@ -192,7 +198,8 @@
                     <li><a href="#projects">Automation Frameworks</a></li>
                     <li><a href="playwright.html">Playwright BDD</a></li>
                     <li><a href="performance.html">Performance Testing</a></li>
-                    <li><a href="restAssured.html">API Testing</a></li>
+                    <li><a href="restAssured.html">Express Service Boilerplate</a></li>
+                    <li><a href="pythonBDD.html">Python BDD</a></li>
                     <li><a href="about.html#expertise">Technical Skills</a></li>
                     <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -289,14 +296,14 @@
         <div class="project">
             <div class="project-header">
                 <h3 class="project-title">
-                    <span class="title-text">REST API Development Framework</span>
+                    <span class="title-text">REST API Development Framework-Express Service Boilerplate</span>
                     <span class="tag">A framework where anyone can spin up / bootstrap their own REST API quickly and is
                         built with Node.js, Express, and MongoDB Atlas.</span>
                 </h3>
             </div>
 
             <div class="project-body">
-                <p>A RESTful API built with **Node.js**, **Express**, and **MongoDB Atlas** for managing user data. This
+                <p>A RESTful API built with Node.js, Express, and MongoDB Atlas for managing user data. This
                     project demonstrates modern API development practices with proper validation, error handling, and
                     cloud deployment.<br></p>
                 <p>Features :</p>
@@ -324,6 +331,49 @@
 
             </div>
         </div>
+
+
+        <!-- Example updated project markup -->
+        <div class="project">
+            <div class="project-header">
+                <h3 class="project-title">
+                    <span class="title-text">Python BDD Test Automation Framework</span>
+                    <span class="tag">A robust, scalable test automation framework built with Python, Behave (BDD),
+                        Selenium, and Requests for comprehensive UI and API testing with beautiful HTML reports.</span>
+                </h3>
+            </div>
+
+            <div class="project-body">
+                <p>This framework offers a comprehensive solution for behavior-driven testing of web applications and
+                    RESTful APIs. Designed with clean architecture principles and following BDD best practices, it
+                    enables teams to write human-readable test scenarios that serve as living documentation<br></p>
+                <p>Features :</p>
+                <ul class="tick-list" aria-label="Project features">
+                    <li><b>BDD with Behave:</b> Write tests in Gherkin syntax (Given/When/Then) for better collaboration
+                        between technical and non-technical team members</li>
+                    <li><b>Dual Testing Support:</b> UI automation with Selenium WebDriver And API testing with Requests
+                        library</li>
+                    <li><b>Multiple Report Formats:</b> modern, interactive HTML dashboards - Allure and Behave</li>
+                    <li><b>Page Object Model :</b> Clean separation of test logic and page elements</li>
+                    <li><b>Parallel Execution:</b> Run tests in parallel for faster feedback </li>
+                    <li><b>Environment Configuration </b> Can execute in QA , Prod ,Dev Env</li>
+                    <li><b>CI/CD Pipeline :</b> Easily integrate with Jenkins, GitHub Actions, GitLab CI, etc.</li>
+                    <li><b>Logging & Screenshots :</b> Automatic capture on test failures</li>
+
+                </ul>
+            </div>
+
+            <div class="project-footer">
+                <a href="pythonBDD.html" class="read-more-button" target="_blank" rel="noopener noreferrer"
+                    aria-label="Read More">Read More</a>
+                <a href="https://github.com/contactkrvineet/python-bdd-automation-framework" class="read-more-button"
+                    target="_blank" rel="noopener noreferrer" aria-label="Live Report">Live Report</a>
+                <a href="https://github.com/contactkrvineet/python-bdd-automation-framework" class="read-more-button"
+                    target="_blank" rel="noopener noreferrer" aria-label="View Project">View Project</a>
+
+            </div>
+        </div>
+
 
         <!-- Example updated project markup -->
         <div class="project">
