--- a/playwright.html
+++ b/playwright.html
@@ -29,7 +29,8 @@
                     <li><a href="index.html#projects">Automation Frameworks</a></li>
                     <li><a href="playwright.html">Playwright BDD</a></li>
                     <li><a href="performance.html">Performance Testing</a></li>
-                    <li><a href="restAssured.html">API Testing</a></li>
+                    <li><a href="restAssured.html">Express Service Boilerplate</a></li>
+                    <li><a href="pythonBDD.html">Python BDD</a></li>
                     <li><a href="about.html#expertise">Technical Skills</a></li>
                     <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
