--- a/TestAutomationPlayground.html
+++ b/TestAutomationPlayground.html
@@ -24,6 +24,7 @@
         <div class="button-container">
             <nav class="main-nav" aria-label="Main navigation">
                 <button class="nav-toggle" aria-label="Open navigation" aria-expanded="false">
+                    <span class="menu-label">Menu</span>
                     <span class="hamburger"></span>
                 </button>
                 <ul class="nav-links">
