--- a/casestudy.html
+++ b/casestudy.html
@@ -61,7 +61,8 @@
                     <li><a href="index.html#projects">Automation Frameworks</a></li>
                     <li><a href="playwright.html">Playwright BDD</a></li>
                     <li><a href="performance.html">Performance Testing</a></li>
-                    <li><a href="restAssured.html">API Testing</a></li>
+                    <li><a href="restAssured.html">Express Service Boilerplate</a></li>
+                    <li><a href="pythonBDD.html">Python BDD</a></li>
                     <li><a href="casestudy.html" class="active">Case Studies</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="TestAutomationPlayground.html">Test Automation Playground</a></li>
