--- a/pythonBDD.html
+++ b/pythonBDD.html
@@ -21,6 +21,7 @@
         </div>
         <div class="button-container">
             <button class="button-design" onclick="location.href='#projects'">View My Portfolio</button>
+            <button class="button-design" onclick="location.href='blog.html'">Blog</button>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -28,7 +29,7 @@
                     <li><a href="index.html#projects">Automation Frameworks</a></li>
                     <li><a href="playwright.html">Playwright BDD</a></li>
                     <li><a href="performance.html">Performance Testing</a></li>
-                    <li><a href="restAssured.html">API Testing</a></li>
+                    <li><a href="restAssured.html">Express Service Boilerplate</a></li>
                     <li><a href="pythonBDD.html">Python BDD</a></li>
                     <li><a href="about.html#expertise">Technical Skills</a></li>
                     <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
@@ -36,23 +37,59 @@
                     <li><a href="TestAutomationPlayground.html">Test Automation Playground</a></li>
                 </ul>
             </nav>
-            <button class="button-design" onclick="location.href='blog.html'">Case Study</button>
+
         </div>
     </header>
 
 
-    <section id="books">
-        <h2>Books</h2>
-        <div class="book">
-            <img src="bookcover.png" alt="A guide for Selenium Docker Integration" class="book-cover">
-            <p>A guide for Selenium Docker Integration</p>
+    <!-- html -->
+    <section id="projects" aria-label="Projects">
+        <div class="project">
+            <div class="project-header">
+                <h3 class="project-title">
+                    <span class="title-text">Python + Behave Test Automation Framework</span>
+                    <span class="tag">python-bdd-automation-framework</span>
+                </h3>
+            </div>
+
+            <div class="project-body">
+                <p class="project-overview">This framework offers a comprehensive solution for behavior-driven testing
+                    of web applications and RESTful APIs. Designed with clean architecture principles and following BDD
+                    best practices, it enables teams to write human-readable test scenarios that serve as living
+                    documentation.</p>
+
+                <ul class="tick-list" aria-label="Key features">
+                    <li>Cross‑Browser Testing: Chromium, Firefox, WebKit</li>
+                    <li>Auto‑wait, parallel execution, time‑travel debugging</li>
+                    <li>BDD with Cucumber: Gherkin readable scenarios and tag‑based runs</li>
+                    <li>Multiple reporting options and CI/CD ready</li>
+                </ul>
+
+                <details class="bdd-example">
+                    <summary>Example Gherkin</summary>
+                    <pre>
+Feature: User Login
+
+  @smoke
+  Scenario: Successful login
+    Given I navigate to "https://example.com"
+    When I enter username "user@test.com"
+    And I enter password "password123"
+    And I click login button
+    Then I should see the dashboard
+        </pre>
+                </details>
+            </div>
+
+            <div class="project-footer">
+                <a class="info-link" href="https://github.com/contactkrvineet/python-bdd-automation-framework"
+                    target="_blank" rel="noopener noreferrer">Repository</a>
+                <a class="read-more-button" href="https://contactkrvineet.github.io/python-bdd-automation-framework/"
+                    target="_blank" rel="noopener noreferrer">Live Demo</a>
+            </div>
         </div>
-        <div class="book">
-            <img src="RestAssured.png" alt="Rest Assured - Practical guide" class="book-cover">
-            <p>Rest Assured - Practical guide with Java</p>
-        </div>
-        <!-- Add more book sections as needed -->
     </section>
+
 
 
     <footer>
