--- a/restAssured.html
+++ b/restAssured.html
@@ -29,7 +29,8 @@
                     <li><a href="index.html#projects">Automation Frameworks</a></li>
                     <li><a href="playwright.html">Playwright BDD</a></li>
                     <li><a href="performance.html">Performance Testing</a></li>
-                    <li><a href="restAssured.html">API Testing</a></li>
+                    <li><a href="restAssured.html">Express Service Boilerplate</a></li>
+                    <li><a href="pythonBDD.html">Python BDD</a></li>
                     <li><a href="about.html#expertise">Technical Skills</a></li>
                     <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -43,7 +44,7 @@
 
     <section>
         <article class="api-doc">
-            <h2>Rest API</h2>
+            <h2>Rest API - Express Service Boilerplate</h2>
             <img src="https://github.com/contactkrvineet/vineetkr-api/workflows/Deploy%20API/badge.svg"
                 alt="Deploy Status" style="height:24px;vertical-align:middle;">
             <p>A RESTful API built with <b>Node.js</b>, <b>Express</b>, and <b>MongoDB Atlas</b> for managing user data.
