--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                     pipelines, and advancing AI model evaluation. Specialized in strategic functional and non-functional
                     testing throughout the SDLC.</span>
                 <p style="font-size:1.08em;line-height:1.7em;">
-                    <span style="font-weight:bold; color:#fff; background:linear-gradient(90deg,#28a745 60%,#4d94d9 100%); padding:4px 18px; border-radius:8px; box-shadow:0 2px 8px rgba(40,167,69,0.10); letter-spacing:1px; font-size:1.13em; display:inline-block;">🚀 Key Skills :</span><br>
+                    <span
+                        style="font-weight:bold; color:#fff; background:linear-gradient(90deg,#28a745 60%,#4d94d9 100%); padding:4px 18px; border-radius:8px; box-shadow:0 2px 8px rgba(40,167,69,0.10); letter-spacing:1px; font-size:1.13em; display:inline-block;">🚀
+                        Key Skills :</span><br>
                     <span style="display:inline-block;margin:2px 0;">💻 <b style="color:#28a745;">Java</b> &nbsp;|&nbsp;
                         🐍 <b style="color:#28a745;">Python</b>
                         &nbsp;|&nbsp; 📜 <b style="color:#28a745;">JavaScript</b></span><br>
