live report python

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Vineet Kumar - Senior QE Manager & Full-Stack SDET Architect | Test Automation Expert</title>
+    <title>Vineet Kumar - QE Manager & Full-Stack SDET Architect | Test Automation Expert</title>
     <meta name="title" content="Vineet Kumar - Senior QE Manager & Full-Stack SDET Architect | Test Automation Expert">
     <meta name="description"
         content="Expert QE Manager with 16+ years in test automation, CI/CD, and AI evaluation. Specialized in Selenium, Playwright, RestAssured, Gatling performance testing, and quality engineering frameworks for enterprise applications.">
@@ -368,7 +368,7 @@
             <div class="project-footer">
                 <a href="pythonBDD.html" class="read-more-button" target="_blank" rel="noopener noreferrer"
                     aria-label="Read More">Read More</a>
-                <a href="https://github.com/contactkrvineet/python-bdd-automation-framework" class="read-more-button"
+                <a href="https://contactkrvineet.github.io/python-bdd-automation-framework" class="read-more-button"
                     target="_blank" rel="noopener noreferrer" aria-label="Live Report">Live Report</a>
                 <a href="https://github.com/contactkrvineet/python-bdd-automation-framework" class="read-more-button"
                     target="_blank" rel="noopener noreferrer" aria-label="View Project">View Project</a>
